feat(experiments)!: universe-first assign() — replace getExperiment/logExposure
A universe is a mutual-exclusion pool: universe(name).assign(user) picks the <=1
experiment a unit is pooled into, auto-logs one exposure, and returns an
Assignment (name/group/enrolled/get(field, fallback)). Removes the direct
getExperiment/logExposure read path (BREAKING). Local eval now mirrors
@shipeasy/core: pooled allocation (hashVersion>=2), per-experiment holdout gates,
reserved headroom, and universe-default + variant param merge.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>